Added new schemas
